@@ -1,0 +1,11 @@
+//
+//  RadioMenuItem.custom
+//
+//	Author:  John Luke  <jluke@cfl.rr.com>
+//
+
+	// creates a new group for this RadioMenuItem
+	public RadioMenuItem (string label)
+	{
+		Raw = gtk_radio_menu_item_new_with_mnemonic (IntPtr.Zero, label);
+	}
