@@ -5451,18 +5451,18 @@
       <method name="GetType" cname="gtk_radio_menu_item_get_type" shared="true">
         <return-type type="GType" />
       </method>
-      <constructor cname="gtk_radio_menu_item_new">
+      <constructor cname="gtk_radio_menu_item_new" hidden="1">
         <parameters>
           <parameter type="GSList*" name="group" />
         </parameters>
       </constructor>
-      <constructor cname="gtk_radio_menu_item_new_with_label">
+      <constructor cname="gtk_radio_menu_item_new_with_label" hidden="1">
         <parameters>
-          <parameter type="GSList*" name="group" null_ok="1" />
+          <parameter type="GSList*" name="group" />
           <parameter type="const-gchar*" name="label" />
         </parameters>
       </constructor>
-      <constructor cname="gtk_radio_menu_item_new_with_mnemonic" preferred="1">
+      <constructor cname="gtk_radio_menu_item_new_with_mnemonic">
         <parameters>
           <parameter type="GSList*" name="group" />
           <parameter type="const-gchar*" name="label" />
