@@ -1,3 +1,9 @@
+2004-02-06  John Luke  <jluke@cfl.rr.com>
+
+	* gtk/Gtk.metadata: hide unneeded RadioMenuItem ctors
+	* gtk/RadioMenuItem.custom: add ctor to create a new group
+	* gtk/gtk-api.xml: regen
+
 2004-02-04  Mike Kestner  <mkestner@ximian.com>
 
 	* generator/CustomMarshalerGen.cs : impl MarshalReturnType.
